--- a/src/styles/chat-ui.module.scss
+++ b/src/styles/chat-ui.module.scss
@@ -98,5 +98,6 @@
 .prose {
   flex: 1;
   overflow-y: auto; /* If you want scrolling when content overflows */
+  color: unset!important;
 }
 
